<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad3" />
        <item
            android:id="@+id/zad4"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad4" />
        <item
            android:id="@+id/zad5"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad5" />
        <item
            android:id="@+id/zad6"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad6" />
        <item
            android:id="@+id/zad7"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad7" />
        <item
            android:id="@+id/zad8"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad8" />
        <item
            android:id="@+id/zad9"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad9" />
        <item
            android:id="@+id/zad10"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad10" />
        <item
            android:id="@+id/zad11"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad11" />
        <item
            android:id="@+id/zad12"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad12" />
        <item
            android:id="@+id/zad13"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad13" />
        <item
            android:id="@+id/zad14"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad14" />
        <item
            android:id="@+id/zad15"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/zad15" />

    </group>
</menu>